# djinitializr

./: LICENSE  pyproject.toml
src/config/: env.py  urls.py
src/config/settings/: __init__.py  base.py  local.py  production.py  testing.py
